--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Hank Quinlan, Horrible Cop
 ---
 
 		<div class="blurb">
-			<h1>Hi there, my name is Bangrui Chen and I am a third year phd student at Cornell majoring in Operations Research.!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+			<h1>Hi there, I am Bangrui Chen!</h1>
+			<p>I am a third year phd student at Cornell majoring in Operations Research and Information Engineering.
+			<a href="/about">Read more about my life...</a></p>
 		</div> 
