--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,10 @@ title: About Hank Quinlan
 
 		<div class="about">
 			<h1>About</h1>
-			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
+			<p> My name is Bangrui Chen and I am currently a third year phd student at Cornell majoring in ORIE. 
+			I got my B.S. degree from the mathematics department at Nanjing University. 
+			Currently, I am working with Prof. Peter Frazier and trying to develop a better 
+			recommentdation system for the arXiv.org.</p>
 
 			<ul class="contacts">
 				<li><a href="#">@TwitterHandle</a></li>
