--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ title: Hank Quinlan, Horrible Cop
 
 		<div class="blurb">
 			<h1>Hi there, I am Bangrui Chen!</h1>
-			<p>I am a third year phd student at Cornell majoring in Operations Research and Information Engineering.
-			<a href="/about">Read more about my life...</a></p>
+			<div id="content">
+				<img src="bangrui.png", alt="Bangrui Chen">
+				<p>I am a third year phd student at Cornell majoring in Operations Research and Information Engineering.
+				<a href="/about">Read more about my life...</a></p>	
+			</div>
 		</div> 
