--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Hank Quinlan, Horrible Cop
 		<div class="blurb">
 			<h1>Hi there, I am Bangrui Chen!</h1>
 			<div id="content">
-				<img src="bangrui.png", alt="Bangrui Chen">
+				<img src="bangrui.png", alt="Bangrui Chen", height="42" width="42">
 				<p>I am a third year phd student at Cornell majoring in Operations Research and Information Engineering.
 				<a href="/about">Read more about my life...</a></p>	
 			</div>
