--- a/cv/index.html
+++ b/cv/index.html
@@ -18,5 +18,8 @@ title: CV of Your Name
 
 					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
 
+					<h2>Presentations</h2>
+					<p>"Upper Bounds For The Correlated Information Filtering Problem", 
+					2015 INFORMS Applied Probability Society Conference 2015, July 4 to July 8, 2015</p>
 
 	</div>
