--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@ title: Hank Quinlan, Horrible Cop
 			<div id="content">
 				<img src="bangrui.png", alt="Bangrui Chen", height="300" width="200">
 				<p>I am a third year phd student at Cornell majoring in Operations Research and Information Engineering.
+			</div>
+			<div id="insideLink">
 				<a href="/about">Read more about my life...</a></p>	
+			</div>
+			<div id="outLink">
+				<a href="http://www.orie.cornell.edu/">Cornell ORIE</a></p>
+				<a href="http://people.orie.cornell.edu/pfrazier/">My advisor: Peter Frazier</a></p>	
 			</div>
 		</div> 
