--- a/cv/index.html
+++ b/cv/index.html
@@ -20,6 +20,7 @@ title: CV of Your Name
 
 					<h2>Presentations</h2>
 					<p>"Upper Bounds For The Correlated Information Filtering Problem", 
+					<a href="APS.pdf" class="download">Download</a>	
 					2015 INFORMS Applied Probability Society Conference 2015, July 4 to July 8, 2015</p>
 
 	</div>
