--- a/cv/index.html
+++ b/cv/index.html
@@ -7,16 +7,16 @@ title: CV of Your Name
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
 					<h1>Bangrui Chen</h1>
 					<address>
-					<strong>Affiliation</strong><br>
-					Street Address<br>
-					City State 12345<br>
-					<abbr title="phone">P:</abbr> (123) 456-7890<br>
-					<span class="obfuscate">youremailaddress@email.com</span>
+					<strong>Cornell University</strong><br>
+					296 Rhodes Hall<br>
+					Ithaca NY 14853-3801<br>
+					<abbr title="phone">P:</abbr> (607) 280-2366<br>
+					<span class="obfuscate">bc496@cornell.edu</span>
 					</address>
 
-					<h2>Select Publications</h2>
+					<h2>Publications</h2>
 
-					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
+					<p><strong>Bangrui Chen, Peter Frazier, The Bayesian Linear Information Filtering Problem (work in progress)</a>.
 
 					<h2>Presentations</h2>
 					<p>"Upper Bounds For The Correlated Information Filtering Problem", 
