--- a/cv/index.html
+++ b/cv/index.html
@@ -16,7 +16,8 @@ title: CV of Your Name
 
 					<h2>Publications</h2>
 
-					<p><strong>Bangrui Chen, Peter Frazier, The Bayesian Linear Information Filtering Problem (work in progress)</a>.
+					<p><strong>Bangrui Chen, Peter Frazier, 
+					The Bayesian Linear Information Filtering Problem (work in progress)</a>.
 
 					<h2>Presentations</h2>
 					<p>"Upper Bounds For The Correlated Information Filtering Problem", 
