--- a/about/index.html
+++ b/about/index.html
@@ -7,12 +7,10 @@ title: About Hank Quinlan
 			<h1>About</h1>
 			<p> My name is Bangrui Chen and I am currently a third year phd student at Cornell majoring in ORIE. 
 			I got my B.S. degree from the mathematics department at Nanjing University. 
-			Currently, I am working with Prof. Peter Frazier and trying to develop a better 
+			Currently, I am working with Prof. Peter Frazier and my research is trying to develop a better 
 			recommentdation system for the arXiv.org.</p>
 
 			<ul class="contacts">
-				<li><a href="#">@TwitterHandle</a></li>
-				<li><a href="#">Your Departmental Webpage</a></li>
-				<li><a href="#">Another site you want to link to</a></li>
+				<li><a href="http://arxiv.org/">arXiv</a></li>
 				</ul>
 		</div>
