--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ title: Hank Quinlan, Horrible Cop
 			<div id="insideLink">
 				<a href="/about">Read more about my life...</a></p>	
 			</div>
-			<div id="outLink">
-				<a href="http://www.orie.cornell.edu/">Cornell ORIE</a></p>
-				<a href="http://people.orie.cornell.edu/pfrazier/">My advisor: Peter Frazier</a></p>	
-			</div>
+			<ul class="contacts">
+				<li><a href="http://www.orie.cornell.edu/">Cornell ORIE</a></li>
+				<li><a href="http://people.orie.cornell.edu/pfrazier/">My advisor: Peter Frazier</a></li>
+				</ul>
 		</div> 
